[package]
name = "blobs-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
beacon_node = { git = "https://github.com/sigp/lighthouse", version = "5.2.1" }
clap = { version = "4.5.8", features = ["derive"] }
futures = "0.3.30"
hex = "0.4.3"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
slog = "2.7.0"
slog-async = "2.8.0"
slog-term = "2.9.1"
tokio = { version = "1.38.0", features = ["full"] }
